testsuite/single/tests/compiler/fail/global_modifier.lpc
// valid
public:

void test() {

}

// okay
nomask private:

void test1() {

}

// fail
private public:

void test2() {

}
